--- a/proyecto_2/progra_4/src/main/resources/templates/formulario.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/formulario.html
@@ -75,7 +75,7 @@
     <h1>Formulario de proveedor</h1>
 
     <form th:object="${proveedor}" th:action="${accion}" method="post">
-        <input type="hidden" th:field="*{idProveedor}">
+      <!--  <input type="hidden" th:field="*{idProveedor}">-->
 
         <label>Identificación: <input type="text" th:field="*{idProveedor}"></label>
         <label>Nombre: <input type="text" th:field="*{nombre}"></label>
@@ -88,7 +88,7 @@
 
         <button type="submit">Guardar</button>
 
-        <a href="/ProveedorController/Listadeproveedores">Volver al listado de proveedores</a>
+        <a href="/LoginController/inicio">VOLVER AL INICIO</a>
     </form>
 </div>
 
