--- a/proyecto_2/progra_4/src/main/resources/templates/formulario.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/formulario.html
@@ -88,7 +88,9 @@
 
         <button type="submit">Guardar</button>
 
-        <a href="/LoginController/inicio">VOLVER AL INICIO</a>
+       <!-- <a href="/LoginController/inicio">VOLVER AL INICIO</a>-->
+        <a th:href="@{/}" class="link">Ir a la página de inicio</a>
+
     </form>
 </div>
 
