clientes de n proveedor

--- a/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
@@ -59,7 +59,7 @@
         </thead>
 
         <tbody>
-        <tr th:each="cliente : ${PRUEBA}">
+        <tr th:each="cliente : ${clientesProveedor}">
             <td th:text="${cliente.getCliente_id()}"></td>
             <td th:text="${cliente.getNombre()}"></td>
             <td th:text="${cliente.getDireccion()}"></td>
