--- a/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
@@ -41,12 +41,43 @@
         tr:hover {
             background-color: #f2f2f2;
         }
+
+        .button {
+            padding: 5px 10px;
+            border: none;
+            border-radius: 3px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 14px;
+            margin-right: 5px;
+            cursor: pointer;
+        }
+
+        .edit-button {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        .edit-button:hover {
+            background-color: #45a049;
+        }
+
+        .delete-button {
+            background-color: #f44336;
+            color: white;
+        }
+
+        .delete-button:hover {
+            background-color: #d32f2f;
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
     <h1>Listado de Clientes</h1>
+    <td th:if="${clientesProveedor.size()>0}" th:text="${clientesProveedor.getFirst().getProveedor_id()}"></td>
 
     <table>
         <thead>
@@ -55,6 +86,7 @@
             <th>Nombre</th>
             <th>Dirección</th>
             <th>Correo</th>
+            <th>Acciones</th> <!-- Nueva columna para botones de acción -->
         </tr>
         </thead>
 
@@ -64,9 +96,30 @@
             <td th:text="${cliente.getNombre()}"></td>
             <td th:text="${cliente.getDireccion()}"></td>
             <td th:text="${cliente.getCorreo_electronico()}"></td>
+            <td>
+                <!-- Botón para editar -->
+                <a class="button edit-button">Editar</a>
+                <!-- Botón para borrar -->
+                <a  class="button delete-button">Borrar</a>
+            </td>
         </tr>
+
+
+        <th:block th:if="${clientesProveedor.size() > 0}">
+            <form action="/ClienteController/nuevocliente" method="get">
+                <!-- Campo oculto para el ID del proveedor -->
+                <input type="hidden" name="proveedorId" th:value="${clientesProveedor.getFirst().getProveedor_id()}" />
+                <button type="submit" class="button">Agregar Cliente</button>
+            </form>
+
+            <a href="/ClienteController/nuevo" class="add-link">Agregar Cliente</a>
+        </th:block>
+
+
         </tbody>
     </table>
+
+
 </div>
 
 </body>
