--- a/progra_4/src/main/resources/templates/formularioProducto.html
+++ b/progra_4/src/main/resources/templates/formularioProducto.html
@@ -79,10 +79,11 @@
         <label>Descripcion: <input type="text" th:field="*{descripcion}"></label>
         <label>Precio: <input type="number" th:field="*{precio}"></label>
         <label>Tipo de producto: <input type="text" th:field="*{tipo_producto}"></label>
-        <label>Proveedor ID: <input type="text"  th:field="*{proveedor_id}" th:value="${clientesProveedor.getFirst().getProveedor_id()}"></label>
+        <label>Proveedor ID: <input type="text"  th:field="*{proveedor_id}" th:value="${clientesProveedor.get(0).getProveedor_id()}" readonly></label>
 
         <button type="submit">Guardar</button>
     </form>
+    <a th:href="@{/ProductoController/Listadeproductos}" class="link">Ir a la página de inicio</a>
 </div>
 </body>
 </html>
