--- a/progra_4/src/main/resources/templates/listarProductos.html
+++ b/progra_4/src/main/resources/templates/listarProductos.html
@@ -75,6 +75,7 @@
 <body>
     <h1>Listado de Productos</h1>
     <div class="container">
+        <td th:if="${clientesProveedor.size()>0}" th:text="${clientesProveedor.getFirst().getProveedor_id()}"></td>
         <table>
             <tr>
                 <th>ID</th>
