pagina que sigue despues del login - Clientes (listo) - Productos (listo) - Facturas (Medio listo)

--- a/progra_4/src/main/resources/templates/proveedorAcciones.html
+++ b/progra_4/src/main/resources/templates/proveedorAcciones.html
@@ -80,7 +80,7 @@
 <div class="container">
         <button th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''">Clientes</button>
         <button th:onclick="'window.location.href=\'/ProductoController/Listadeproductos\''">Productos</button>
-        <!--<button th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''">Facturas</button>-->
+        <button th:onclick="'window.location.href=\'/FacturaController/ListadeFacturas\''">Facturas</button>
 </div>
 
 </body>
