--- a/proyecto_2/progra_4/src/main/resources/templates/listarproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarproveedor.html
@@ -107,7 +107,7 @@
 
         <tbody>
         <tr th:each="proveedor : ${listaProveedor}">
-            <td th:text="${proveedor.getIdProveedor()}"></td>
+            <td th:text="${proveedor.idProveedor()}"></td>
             <td th:text="${proveedor.nombre}"></td>
             <td th:text="${proveedor.telefono}"></td>
             <td th:text="${proveedor.correoElectronico}"></td>
