--- a/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
@@ -74,16 +74,17 @@
 <div class="container">
     <h1>Formulario de proveedor</h1>
 
-    <form th:object="${proveedor}" th:action="${accion}" method="post">
-      <!--  <input type="hidden" th:field="*{idProveedor}">-->
+    <form th:object="${proveedor}" th:action="@{/ProveedorController/nuevo_proveedor}" method="post">
+
+    <!--  <input type="hidden" th:field="*{idProveedor}">-->
 
         <label>Identificación: <input type="text" th:field="*{idProveedor}"></label>
         <label>Nombre: <input type="text" th:field="*{nombre}"></label>
         <label>Correo: <input type="text" th:field="*{correoElectronico}"></label>
         <label>Contraseña: <input type="text" th:field="*{contrasena}"></label>
-        <input type="hidden" th:field="*{activo}" value=true>
         <label>Teléfono: <input type="text" th:field="*{telefono}"></label>
         <label>Dirección: <input type="text" th:field="*{direccion}"></label>
+
         <label for="tipoProveedor">Tipo (Físico/Jurídico):</label>
         <select id="tipoProveedor" name="tipoProveedor" th:field="*{tipoProveedor}">
             <option value="Físico">Físico</option>
@@ -93,7 +94,7 @@
 
         <button type="submit">Guardar</button>
 
-       <!-- <a href="/LoginController/inicio">VOLVER AL INICIO</a>-->
+
         <a th:href="@{/}" class="link">Ir a la página de inicio</a>
 
     </form>
