--- a/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
@@ -75,27 +75,24 @@
     <h1>Formulario de proveedor</h1>
 
     <form th:object="${proveedor}" th:action="${accion}" method="post">
-      <!--  <input type="hidden" th:field="*{idProveedor}">-->
-
-        <label>Identificación: <input type="text" th:field="*{idProveedor}"></label>
-        <label>Nombre: <input type="text" th:field="*{nombre}"></label>
-        <label>Correo: <input type="text" th:field="*{correoElectronico}"></label>
-        <label>Contraseña: <input type="text" th:field="*{contrasena}"></label>
-        <input type="hidden" th:field="*{activo}" value=true>
-        <label>Teléfono: <input type="text" th:field="*{telefono}"></label>
-        <label>Dirección: <input type="text" th:field="*{direccion}"></label>
-        <label for="tipoProveedor">Tipo (Físico/Jurídico):</label>
-        <select id="tipoProveedor" name="tipoProveedor" th:field="*{tipoProveedor}">
+        <select id="tipoProveedor" name="tipoProveedor" th:field="*{tipoProveedor}" required>
+            <option value="" th:selected="${proveedor.tipoProveedor == null}">Seleccionar</option>
             <option value="Físico">Físico</option>
             <option value="Jurídico">Jurídico</option>
         </select>
-
-
+        <label>Identificación:
+            <input id="idProveedor" type="text" th:field="*{idProveedor}" th:maxlength="${proveedor.tipoProveedor == 'Físico' ? '9' : '10'}" th:required="${proveedor.tipoProveedor != null}" required>
+            <span class="error-message" th:if="${proveedor.tipoProveedor == 'Físico'}">Debe contener 9 dígitos.</span>
+            <span class="error-message" th:if="${proveedor.tipoProveedor == 'Jurídico'}">Debe contener 10 dígitos.</span>
+        </label>
+        <label>Nombre: <input type="text" th:field="*{nombre}" required></label>
+        <label>Correo: <input type="text" th:field="*{correoElectronico}" required></label>
+        <label>Contraseña: <input type="text" th:field="*{contrasena}" required></label>
+        <input type="hidden" th:field="*{activo}" value=true>
+        <label>Teléfono: <input type="text" th:field="*{telefono}" required></label>
+        <label>Dirección: <input type="text" th:field="*{direccion}" required></label>
         <button type="submit">Guardar</button>
-
-       <!-- <a href="/LoginController/inicio">VOLVER AL INICIO</a>-->
         <a th:href="@{/}" class="link">Ir a la página de inicio</a>
-
     </form>
 </div>
 
