--- a/progra_4/src/main/resources/templates/formularioProducto.html
+++ b/progra_4/src/main/resources/templates/formularioProducto.html
@@ -89,7 +89,7 @@
 
         <button type="submit">Guardar</button>
     </form>
-    <a th:href="@{/ProductoController/Listadeproductos}" class="link">Ir a la página de inicio</a>
+    <a th:href="@{/ProductoController/Listadeproductos}" class="link">Volver</a>
 </div>
 </body>
 </html>
