--- a/progra_4/src/main/resources/templates/listarClientes.html
+++ b/progra_4/src/main/resources/templates/listarClientes.html
@@ -78,7 +78,7 @@
 <div class="container">
     <h1>Listado de Clientes</h1>
     <td th:if="${clientesProveedor.size()>0}" th:text="${clientesProveedor.getFirst().getProveedor_id()}"></td>
-
+    <td><button class="button" th:onclick="'window.location.href=\'/homecontroler/home\''">Volver</button></td>
     <table>
         <thead>
         <tr>
