--- a/progra_4/src/main/resources/templates/formulariocliente.html
+++ b/progra_4/src/main/resources/templates/formulariocliente.html
@@ -99,7 +99,7 @@
         <button type="submit">Guardar</button>
 
         <!-- Enlace para volver al inicio -->
-        <a th:href="@{/}" class="link">Ir a la página de inicio</a>
+        <a th:href="@{/ClienteController/Listadeclientes}" class="link">Volver</a>
     </form>
 </div>
 
