--- a/progra_4/src/main/resources/templates/listarFacturas.html
+++ b/progra_4/src/main/resources/templates/listarFacturas.html
@@ -76,6 +76,7 @@
 <h1>Listado de Productos</h1>
 <div class="container">
     <td th:if="${clientesProveedor.size()>0}" th:text="${clientesProveedor.getFirst().getProveedor_id()}"></td>
+    <td><button class="button" th:onclick="'window.location.href=\'/homecontroler/home\''">Volver</button></td>
     <table>
         <tr>
             <th>Factura ID</th>
