Implementación de soporte multilenguaje y formularios template y cliente

--- a/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
@@ -1,94 +1,40 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:fmt="http://www.w3.org/1999/XSL/Transform">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Clientes</title>
-    <style>
-        body {
-            font-family: "Arial Narrow", sans-serif; /* Specify fallback font */
-            margin: 2rem;
-            background-color: lightskyblue;
-        }
-        h1 {
-            text-align: center;
-        }
-
-        .form-group {
-            width: 500px;
-            display: flex;
-            margin: auto;
-            margin-bottom: 0rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 1rem;
-            background-color: #fff;
-            font-family: Candara;
-            font-size: 17px;
-            font-weight: bold;
-        }
-
-        .form-row {  /* New class for label and input containers */
-            display: flex; /* Make labels and inputs sit next to each other */
-            margin-bottom: 1rem; /* Add space between rows */
-            align-items: center; /* Vertically align labels and inputs */
-        }
-
-        .form-row label {
-            width: 110px; /* Consistent label width for alignment */
-            text-align: center ; /* Right-align labels for better spacing */
-        }
-
-        .form-row input[type="text"],
-        .form-row input[type="email"] {
-            flex: 1; /* Make inputs flexible to fill remaining space */
-            padding: 5px; /* Add some padding for better user interaction */
-            border: 1px solid #ccc;
-        }
-
-        input[type="submit"] {
-            background-color: #4CAF50; /* Green button color */
-            color: white; /* White text for contrast */
-            padding: 10px 20px; /* Increase button size for better click target */
-            border: none; /* Remove default border */
-            border-radius: 5px; /* Add rounded corners */
-            cursor: pointer; /* Indicate clickable behavior */
-            margin: 0 auto;
-        }
-        input[type="submit"]:hover {
-            background-color: aquamarine;
-            color: black;
-            margin: 0 auto;
-        }
-
-
-    </style>
+    <title th:text="#{Titulo}">Registro de Clientes</title>
+    <link rel="stylesheet" th:href="@{/css/RegistroCliente.css}">
+    <link rel="stylesheet" th:href="@{/css/template.css}">
 </head>
 <body>
-<h1>Registro de Clientes</h1>
-<form action="/registrar" method="post">
-    <div class="form-group">
-        <div class="form-row" style="display: inline;">
-            <label for="nombre"><span style="color: red;">*</span>Nombre:</label>
-            <input type="text" id="nombre" placeholder="Nombre" name="nombre" required><br><br>
-            <label for="primerApellido"><span style="color: red;">*</span>Primer apellido:</label>
-            <input type="text" id="primerApellido" placeholder="Primer apellido" name="primerApellido" required><br><br>
-            <label for="segundoApellido"><span style="color: red;">*</span>Segundo apellido:</label>
-            <input type="text" id="segundoApellido" placeholder="Segundo apellido" name="segundoApellido" required><br><br>
-            <label for="tipoCedula"><span style="color: red;">*</span>Tipo de Cédula:</label>
-            <select id="tipoCedula" onchange="">
-                <option value="ninguna">Tipo de cédula</option>
-                <option value="juridica">Cédula Jurídica</option>
-                <option value="fisica">Cédula Física</option>
-            </select><br><br>
-            <label for="cedula"><span style="color: red;">*</span>Cédula:</label>
-            <input type="text" id="cedula" placeholder="Cédula" name="cedula" required [disabled]="tipoCedula.value === 'ninguna'"><br>
-            <label for="email"><span style="color: red;">*</span>Correo Electrónico:</label>
-            <input type="email" id="email" placeholder="Correo electrónico" name="email" required><br><br>
+<header th:replace="/template :: header"></header>
+    <form action="#" th:action="@{/registrar}" method="post">
+        <div class="form-group">
+            <div class="form-row" style="display: inline;">
+                <h1 th:text="#{RegistroClientes}">Registro de Clientes</h1>
+                <img src="/Imagenes/login.png" alt="Descripción de la imagen" class="imagen-registro"><br><br>
+                <label for="tipo_cliente"><span style="color: red;">*</span><span th:text="#{TipoCedula}">Tipo de Cédula</span>:</label>
+                <select id="tipo_cliente" onchange="" th:field="*{cliente.tipo_cliente}">
+                    <option value="ninguna" th:text="#{TipoCedulaNinguna}">Tipo de cédula</option>
+                    <option value="juridica" th:text="#{TipoCedulaJuridica}">Cédula Jurídica</option>
+                    <option value="fisica" th:text="#{TipoCedulaFisica}">Cédula Física</option>
+                </select><br><br>
+                <label for="cedula"><span style="color: red;">*</span><span th:text="#{Cedula}">Cédula</span>:</label>
+                <input type="text" id="cedula" placeholder="Cédula" name="cedula" required th:disabled="${cliente.tipo_cliente == 'ninguna'}" th:field="*{cliente.tipo_cliente}"><br><br>
+                <label for="nombre"><span style="color: red;">*</span><span th:text="#{Nombre}">Nombre</span>:</label>
+                <input type="text" id="nombre" placeholder="Nombre" name="nombre" required th:field="*{cliente.nombre}"><br><br>
+                <label for="email"><span style="color: red;">*</span><span th:text="#{Correo}">Correo Electrónico</span>:</label>
+                <input type="email" id="email" placeholder="Correo electrónico" name="email" required th:field="*{cliente.correo_electronico}"><br><br>
+                <label for="direccion"><span style="color: red;">*</span><span th:text="#{Direccion}">Dirección</span>:</label>
+                <input type="direccion" id="direccion" placeholder="Dirección" name="direccion" required th:field="*{cliente.direccion}"><br><br>
+                <input type="submit" th:value="#{Registrar}">
+            </div>
         </div>
-    </div>
-    <input type="submit" value="Registrar">
-</form>
 
-</body>
+    </form>
+    <footer th:replace="/template :: footer"></footer>
+    </body>
 </html>
+
+
