--- a/proyecto_2/progra_4/src/main/resources/templates/index.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/index.html
@@ -89,7 +89,7 @@
 <body>
 <h1>Iniciar sesión</h1>
 <form th:action="@{/login}" method="post">
-    <label for="nombre">Usuario:</label>
+    <label for="usuario">Usuario:</label>
     <input type="text" id="usuario" placeholder="Usuario" name="usuario" required><br>
 
     <label for="contrasena">Contraseña:</label>
