cambios en form
cambios en form

--- a/proyecto_2/progra_4/src/main/resources/templates/listarProductos.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarProductos.html
@@ -41,8 +41,12 @@
 
 
 
-
+        <th:block th:if="${ProductoProveedor.size() > 0}">
+            <form action="/ClienteController/nuevocliente" method="get">
+                <!-- Campo oculto para el ID del proveedor -->
+                <input type="hidden" name="proveedorId" th:value="${ProductoProveedor.getFirst().getProveedorId()}" />
                 <button type="submit" class="button">Agregar producto</button>
+            </form>
 
         </th:block>
 
