--- a/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
@@ -106,10 +106,14 @@
 
 
 
-                    <button type="submit" class="button">Agregar Cliente</button>
-     
-        </th:block>
+        <th:block th:if="${clientesProveedor.size() > 0}">
+            <form action="/ClienteController/nuevocliente" method="get">
+                <!-- Campo oculto para el ID del proveedor -->
+                <input type="hidden" name="proveedorId" th:value="${clientesProveedor.getFirst().getClienteId()}" />
+                <button type="submit" class="button">Agregar Cliente</button>
+            </form>
 
+        </th:block>
 
         </tbody>
     </table>
