--- a/proyecto_2/progra_4/src/main/resources/templates/proveedorAcciones.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/proveedorAcciones.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
-    <title>Nuevo Producto</title>
+    <title>HOME</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,6 +18,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            display: grid;
+            gap: 10px;
         }
 
         h1 {
@@ -57,21 +58,6 @@
             background-color: #45a049;
         }
 
-       .submit-button {
-            padding: 10px 20px;
-            margin: 5px 10px;
-            background-color: #2b312d;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .submit-button:hover {
-            background-color: #623625;
-        }
-
         a {
             display: block;
             margin-top: 10px;
@@ -86,23 +72,15 @@
     </style>
 </head>
 <body>
+
+
+<h1>Proveedor</h1>
+<h1>Acciones</h1>
 <div class="container">
-    <h1>Nuevo Producto</h1>
-    <form th:object="${producto}" th:action="@{/ProductoController/nuevo}" method="post">
-
-
-        <label>Nombre: <input type="text" th:field="*{nombre}"></label>
-        <label>Descripcion: <input type="text" th:field="*{descripcion}"></label>
-        <label>Precio: <input type="number" th:field="*{precio}"></label>
-        <label>Tipo de producto:
-            <select th:field="*{tipoProducto}">
-                <option th:each="tipo : ${actividad}" th:value="${actividad}" th:text="${actividad}"></option>
-            </select>
-        </label>
-
-        <button type="submit">Guardar</button>
-    </form>
-    <button class="submit-button" th:onclick="'window.location.href=\'/ProductoController/ListadeProducto\''">Volver</button>
+        <button th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''">Clientes</button>
+        <button th:onclick="'window.location.href=\'/ProductoController/ListadeProducto\''">Productos</button>
+        <button th:onclick="'window.location.href=\'/FacturaController/ListadeFacturas\''">Facturas</button>
 </div>
+
 </body>
 </html>
