--- a/proyecto_2/progra_4/src/main/resources/templates/ListadeProducto.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/ListadeProducto.html
@@ -40,11 +40,8 @@
         </tr>
 
 
-            <form action="/ClienteController/nuevocliente" method="get">
-                <button type="submit" class="button">Agregar producto</button>
-            </form>
 
-
+        <td><button class="button" th:onclick="'window.location.href=\'/ProveedorAcciones\''">Volver</button></td>
 
         </tbody>
     </table>
