--- a/proyecto_2/progra_4/src/main/resources/templates/listarFacturas.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarFacturas.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Listado de Clientes</title>
-
+    <title>Facturas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -74,42 +73,37 @@
     </style>
 </head>
 <body>
-
+<h1>Listado de Facturas</h1>
 <div class="container">
-    <h1>Listado de Clientes</h1>
     <td th:text="${session.id_proveedor}"></td>
     <td><button class="button" th:onclick="'window.location.href=\'/homecontroler/ProveedorAcciones\''">Volver</button></td>
-    <td><button class="button" th:onclick="'window.location.href=\'/ClienteController/nuevocliente\''">Nuevo Cliente</button></td>
-    <table>
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Nombre</th>
-            <th>Dirección</th>
-            <th>Correo</th>
-            <th>Acciones</th> <!-- Nueva columna para botones de acción -->
-        </tr>
-        </thead>
+    <td><button class="button" th:onclick="'window.location.href=\'/FacturaController/NuevaFactura\''">Nueva Factura</button></td>
 
-        <tbody>
-        <tr th:each="cliente : ${clientesProveedor}">
-            <td th:text="${cliente.clienteId}"></td>
-            <td th:text="${cliente.getNombre()}"></td>
-            <td th:text="${cliente.getDireccion()}"></td>
-            <td th:text="${cliente.correoElectronico}"></td>
+    <table>
+        <tr>
+            <th>Factura ID</th>
+            <th>Fecha</th>
+            <th>Total</th>
+            <th>Cliente</th>
+            <th>Proveedor</th>
+            <th>Acciones</th>
+        </tr>
+
+        <tr th:each="factura : ${Facturas}">
+            <td th:text="${factura.getFacturaId()}"></td>
+            <td th:text="${factura.getFecha()}"></td>
+            <td th:text="${factura.getTotal()}"></td>
+            <td th:text="${factura.getCliente()}"></td>
+            <td th:text="${factura.getProveedor()}"></td>
             <td>
                 <!-- Botón para editar -->
-                <a class="button edit-button">Editar</a>
+                <a class="button edit-button" th:href="@{'/FacturaController/pdf'}">PDF</a>
                 <!-- Botón para borrar -->
-                <a  class="button delete-button">Borrar</a>
+                <a  class="button delete-button" th:href="@{'/FacturaController/xml'}">XML</a>
             </td>
         </tr>
 
-
-        </tbody>
     </table>
-
-
 </div>
 
 </body>
