--- a/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarClientes.html
@@ -3,78 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Listado de Clientes</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            width: 80%;
-            margin: 20px auto;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        tr:hover {
-            background-color: #f2f2f2;
-        }
-
-        .button {
-            padding: 5px 10px;
-            border: none;
-            border-radius: 3px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 14px;
-            margin-right: 5px;
-            cursor: pointer;
-        }
-
-        .edit-button {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        .edit-button:hover {
-            background-color: #45a049;
-        }
-
-        .delete-button {
-            background-color: #f44336;
-            color: white;
-        }
-
-        .delete-button:hover {
-            background-color: #d32f2f;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/ListarClientes.css}">
+    <link rel="stylesheet" th:href="@{/css/template.css}">
 </head>
 <body>
-
+<header th:replace="/template :: header"></header>
 <div class="container">
     <h1>Listado de Clientes</h1>
     <td th:text="${session.id_proveedor}"></td>
@@ -103,23 +36,14 @@
                 <a  class="button delete-button">Borrar</a>
             </td>
         </tr>
-
-
-
             <form action="/ClienteController/nuevocliente" method="get">
                 <button type="submit" class="button">Agregar Cliente</button>
             </form>
-
-
-      
-
         <td><button class="button" th:onclick="'window.location.href=\'/ProveedorAcciones\''">Volver</button></td>
 
         </tbody>
     </table>
-
-
-</div>
-
+    </div>
+    <footer th:replace="/template :: footer"></footer>
 </body>
 </html>
