--- a/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
@@ -9,23 +9,23 @@
 </head>
 <body>
 <header th:replace="/template :: header"></header>
-    <form action="#" th:action="@{/registrar}" method="post">
+    <form action="#" th:action="@{/RegistroCliente}" method="post">
         <div class="form-group">
             <div class="form-row" style="display: inline;">
                 <h1 th:text="#{RegistroClientes}">Registro de Clientes</h1>
                 <img src="/Imagenes/login.png" alt="Descripción de la imagen" class="imagen-registro"><br><br>
                 <label for="tipo_cliente"><span style="color: red;">*</span><span th:text="#{TipoCedula}">Tipo de Cédula</span>:</label>
-                <select id="tipo_cliente" onchange="" th:field="*{cliente.tipo_cliente}">
+                <select id="tipo_cliente" onchange="" th:field="*{cliente.tipoCliente}">
                     <option value="ninguna" th:text="#{TipoCedulaNinguna}">Tipo de cédula</option>
                     <option value="juridica" th:text="#{TipoCedulaJuridica}">Cédula Jurídica</option>
                     <option value="fisica" th:text="#{TipoCedulaFisica}">Cédula Física</option>
                 </select><br><br>
                 <label for="cedula"><span style="color: red;">*</span><span th:text="#{Cedula}">Cédula</span>:</label>
-                <input type="text" id="cedula" placeholder="Cédula" name="cedula" required th:disabled="${cliente.tipo_cliente == 'ninguna'}" th:field="*{cliente.tipo_cliente}"><br><br>
+                <input type="text" id="cedula" placeholder="Cédula" name="cedula" required th:disabled="${cliente.tipoCliente == 'ninguna'}" th:field="*{cliente.tipoCliente}"><br><br>
                 <label for="nombre"><span style="color: red;">*</span><span th:text="#{Nombre}">Nombre</span>:</label>
                 <input type="text" id="nombre" placeholder="Nombre" name="nombre" required th:field="*{cliente.nombre}"><br><br>
                 <label for="email"><span style="color: red;">*</span><span th:text="#{Correo}">Correo Electrónico</span>:</label>
-                <input type="email" id="email" placeholder="Correo electrónico" name="email" required th:field="*{cliente.correo_electronico}"><br><br>
+                <input type="email" id="email" placeholder="Correo electrónico" name="email" required th:field="*{cliente.correoElectronico}"><br><br>
                 <label for="direccion"><span style="color: red;">*</span><span th:text="#{Direccion}">Dirección</span>:</label>
                 <input type="direccion" id="direccion" placeholder="Dirección" name="direccion" required th:field="*{cliente.direccion}"><br><br>
                 <input type="submit" th:value="#{Registrar}">
